tmp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"fastly.amazee.io/watch":"false","ingress.kubernetes.io/ssl-redirect":"true","kubernetes.io/tls-acme":"true","lagoon.sh/branch":"main","lagoon.sh/version":"24.5.1","monitor.stakater.com/enabled":"true","monitor.stakater.com/overridePath":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true","uptimerobot.monitor.stakater.com/alert-contacts":"unconfigured","uptimerobot.monitor.stakater.com/interval":"60"},"creat [...]
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: main
    lagoon.sh/version: 24.5.1
    monitor.stakater.com/enabled: "true"
    monitor.stakater.com/overridePath: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    uptimerobot.monitor.stakater.com/alert-contacts: unconfigured
    uptimerobot.monitor.stakater.com/interval: "60"
  creationTimestamp: "2025-12-17T22:38:04Z"
  generation: 1
  labels:
    activestandby.lagoon.sh/migrate: "false"
    app.kubernetes.io/instance: bibliotest.deranged.dk
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: custom-ingress
    helm.sh/chart: custom-ingress-0.1.0
    lagoon.sh/autogenerated: "false"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/primaryIngress: "true"
    lagoon.sh/project: canary
    lagoon.sh/service: bibliotest.deranged.dk
    lagoon.sh/service-type: custom-ingress
  name: bibliotest.deranged.dk
  namespace: canary-main
  resourceVersion: "1504197705"
  uid: 74c305e0-099e-48d2-bc65-363358b65f06
spec:
  rules:
  - host: bibliotest.deranged.dk
    http:
      paths:
      - backend:
          service:
            name: varnish
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bibliotest.deranged.dk
    secretName: bibliotest.deranged.dk-tls
status:
  loadBalancer:
    ingress:
    - ip: 20.86.109.250
